--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.5",
+    "gsap": "^3.12.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "moment": "^2.30.1",
